--- a/integration-tests/standalone.conf
+++ b/integration-tests/standalone.conf
@@ -276,6 +276,17 @@ defaultRetentionSizeInMB=0
 # How often to check whether the connections are still alive
 keepAliveIntervalSeconds=30
 
+
+### --- Metrics --- ###
+
+# Enable topic level metrics
+exposeTopicLevelMetricsInPrometheus=true
+
+### --- Broker Web Stats --- ###
+
+# Enable topic level metrics
+exposePublisherStats=true
+
 # Enable topic auto creation if new producer or consumer connected (disable auto creation with value false)
 allowAutoTopicCreation=true
 
